--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
+* {
+  cursor: none;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #000000;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.apple_logo {
+  width: 9vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.progress-bar-outer {
+  margin-top: 70px; /* Espace entre la barre de progression et le logo */
+  width: 250px;
+  height: 10px;
+  background-color: #000000; /* Gris clair pour le fond */
+  border: 2px solid white; /* Bordure blanche */
+  border-radius: 10px; /* Bords arrondis pour la barre externe */
+  overflow: hidden; /* Assure que la barre interne reste dans les limites de la barre externe */
 }
+
+.progress-bar-inner {
+  height: 20px; /* Hauteur de la barre de chargement */
+  background-color: white; /* Couleur de remplissage blanc */
+  width: 0; /* Défini par la prop 'progress' */
+  transition: width 0.5s ease-in-out; /* Transition douce pour l'animation */
+}
+
+
